--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -28,3 +28,6 @@ jobs:
     - name: Build with Maven
       run: mvn -B package --file Food-Delivery-Platform-API/pom.xml
 
+      - name: Execute Jar file
+      run: sudo kill -9 `sudo lsof -t -i:8080` & sudo java -jar /home/ubuntu/actions-runner/_work/foodDeliveryApp/foodDeliveryApp/Food-Delivery-Platform-API/target/Food-Delivery-Platform-API-0.0.1-SNAPSHOT.jar &
+
