--- a/Food-Delivery-Platform-API/src/main/resources/application.properties
+++ b/Food-Delivery-Platform-API/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-spring.datasource.url=jdbc:mysql://43.204.96.46:3306/foodAppDatabase
-spring.datasource.username=foodAppDB
-spring.datasource.password=1234
+spring.datasource.url=jdbc:mysql://localhost:3306/foodAppDB
+spring.datasource.username=root
+spring.datasource.password=root
 spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
 
